summaries/projections/errors.txt
[FAIL] impute_missing_batter_adj_woba.py ERROR [2025-09-06 08:16:34 PM EDT]:
  File "/home/runner/work/baseball_for_mat/baseball_for_mat/scripts/impute_missing_batter_adj_woba.py", line 231
    global INPUT_FILES
    ^^^^^^^^^^^^^^^^^^
SyntaxError: name 'INPUT_FILES' is assigned to before global declaration

---

